--- a/html/sanPham.html
+++ b/html/sanPham.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="header-main__right">
                   <ul class="header-main_menus">
-                        <li class="menu-item"><a href="./index.html">Trang chủ</a></li>
+                        <li class="menu-item"><a href="/index.html">Trang chủ</a></li>
                         <li class="menu-item"><a href="./gioiThieu.html">Giới thiệu</a></li>
                         <li class="menu-item"><a href="./sanPham.html">Sản phẩm</a></li>
                         
