--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
             <div class="header-main__right">
               <ul class="header-main_menus">
                 <li class="menu-item"><a href="./index.html">Trang chủ</a></li>
-                <li class="menu-item"><a href="./gioiThieu.html">Giới thiệu</a></li>
-                <li class="menu-item"><a href="./sanPham.html">Sản phẩm</a></li>
-                
-                <li class="menu-item"><a href="./lienHe.html">Liên hệ</a></li>
+                <li class="menu-item"><a href="./html/gioiThieu.html">Giới thiệu</a></li>
+                <li class="menu-item"><a href="./html/sanPham.html">Sản phẩm</a></li>
+                <li class="menu-item"><a href="./html/lienHe.html">Liên hệ</a></li>
               </ul>
               <!-- <div class="icon-search">
                 <i class="fa fa-search" aria-hidden="true"></i>
