--- a/html/chiTietSanPham.html
+++ b/html/chiTietSanPham.html
@@ -20,11 +20,11 @@
         <!--  Add the new slick-theme.css if you want the default styling -->
         <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css"/>
     <!-- Khai báo CSS của mình viết -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <!-- <link rel="stylesheet" href="css/gioiThieu.css"> -->
-    <link rel="stylesheet" href="css/sanPham.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/chiTietSanPham.css">
+    <link rel="stylesheet" href="/css/sanPham.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/chiTietSanPham.css">
 
 </head>
 <body>
@@ -109,12 +109,12 @@
 </body>
 
 <!-- Khái báo jQuery -->
-<script src="./libs/jquery/jquery-3.5.1.min.js"></script>
-<script src="./libs/slick/slick.min.js"></script>
+<script src="/libs/jquery/jquery-3.5.1.min.js"></script>
+<script src="/libs/slick/slick.min.js"></script>
 
 <!-- Khai báo Javascript của thư viện -->
 <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
 <!-- Khai báo Javascript của mình -->
-<script src="./js/main.js"></script>
-<script src="./js/sanPham.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/sanPham.js"></script>
 </html>
