--- a/html/lienHe.html
+++ b/html/lienHe.html
@@ -19,11 +19,11 @@
          <!--  Add the new slick-theme.css if you want the default styling -->
          <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css"/>
      <!-- Khai báo CSS của mình viết -->
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="/css/style.css">
      <!-- <link rel="stylesheet" href="css/gioiThieu.css"> -->
-     <link rel="stylesheet" href="css/sanPham.css">
-     <link rel="stylesheet" href="css/responsive.css">
-     <link rel="stylesheet" href="css/lienHe.css">
+     <link rel="stylesheet" href="/css/sanPham.css">
+     <link rel="stylesheet" href="/css/responsive.css">
+     <link rel="stylesheet" href="/css/lienHe.css">
 </head>
 <body>
     <header>
