--- a/html/lienHe.html
+++ b/html/lienHe.html
@@ -15,9 +15,9 @@
  
      <!-- Khai báo những CSS của thư viện bên ngoài (nếu có) -->
          <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-         <link rel="stylesheet" type="text/css" href="./libs/slick/slick.css"/>
+         <link rel="stylesheet" type="text/css" href="/libs/slick/slick.css"/>
          <!--  Add the new slick-theme.css if you want the default styling -->
-         <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css"/>
+         <link rel="stylesheet" type="text/css" href="/libs/slick/slick-theme.css"/>
      <!-- Khai báo CSS của mình viết -->
      <link rel="stylesheet" href="/css/style.css">
      <!-- <link rel="stylesheet" href="css/gioiThieu.css"> -->
@@ -31,7 +31,7 @@
             <div class="header-main-content">
               <div class="header-main__wrapper">
                 <div class="logo">
-                  <img src="./images/LogoCherrybite.png" alt="">
+                  <img src="/images/LogoCherrybite.png" alt="">
                 </div>
                 <div class="header-main__right">
                   <ul class="header-main_menus">
@@ -76,8 +76,8 @@
                 <h4>SĐT: 01686502347</h4>
                 <h4>Mail: manager@cherrybitebakery.com</h4>
                 <div class="info-icon">
-                    <span><img src="./images/fbIcon.png" alt=""></span>
-                    <span><img src="./images/istaIcon.png" alt=""></span>
+                    <span><img src="/images/fbIcon.png" alt=""></span>
+                    <span><img src="/images/istaIcon.png" alt=""></span>
                 </div>
             </div>
 
