--- a/html/gioiThieu.html
+++ b/html/gioiThieu.html
@@ -16,9 +16,9 @@
 
   <!-- Khai báo những CSS của thư viện bên ngoài (nếu có) -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="./libs/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/libs/slick/slick.css"/>
     <!--  Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="/libs/slick/slick-theme.css"/>
   <!-- Khai báo CSS của mình viết -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/gioiThieu.css">
@@ -32,7 +32,7 @@
             <div class="header-main-content">
               <div class="header-main__wrapper">
                 <div class="logo">
-                  <img src="./images/LogoCherrybite.png" alt="">
+                  <img src="/images/LogoCherrybite.png" alt="">
                 </div>
                 <div class="header-main__right">
                   <ul class="header-main_menus">
