--- a/html/sanPham.html
+++ b/html/sanPham.html
@@ -16,9 +16,9 @@
 
   <!-- Khai báo những CSS của thư viện bên ngoài (nếu có) -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" type="text/css" href="./libs/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/libs/slick/slick.css"/>
     <!--  Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="./libs/slick/slick-theme.css"/>
+    <link rel="stylesheet" type="text/css" href="/libs/slick/slick-theme.css"/>
   <!-- Khai báo CSS của mình viết -->
   <link rel="stylesheet" href="/css/style.css">
   <!-- <link rel="stylesheet" href="css/gioiThieu.css"> -->
@@ -33,7 +33,7 @@
             <div class="header-main-content">
               <div class="header-main__wrapper">
                 <div class="logo">
-                  <img src="./images/LogoCherrybite.png" alt="">
+                  <img src="/images/LogoCherrybite.png" alt="">
                 </div>
                 <div class="header-main__right">
                   <ul class="header-main_menus">
@@ -286,7 +286,7 @@
     <div class="container container-best-selling">
       <div class="list-type-cake-tittle">
           <div class="icon icon-chia-bien">
-              <img src="./images/logo04c.png" alt="">
+              <img src="/images/logo04c.png" alt="">
           </div>
           <div class="main-tittle ten-muc">Best Selling</div>
       </div>
@@ -295,7 +295,7 @@
             <div class="best-selling-slider">
               <!-- tung item slider best selling -->
                 <div class="bs-sli-item">
-                    <div class="bs-image"><img src="./images/bestSelling/banhAnKieng.jpeg" alt=""></div>
+                    <div class="bs-image"><img src="/images/bestSelling/banhAnKieng.jpeg" alt=""></div>
                     <div class="bs-info">
                           <div class="name-cake">Bánh mì ăn kiêng</div>
                           <div class="price-cake">250.000 VNĐ</div>
@@ -304,7 +304,7 @@
                 </div>
 
                 <div class="bs-sli-item">
-                  <div class="bs-image"><img src="./images/bestSelling/banhAnKieng.jpeg" alt=""></div>
+                  <div class="bs-image"><img src="/images/bestSelling/banhAnKieng.jpeg" alt=""></div>
                   <div class="bs-info">
                         <div class="name-cake">Bánh mì ăn kiêng</div>
                         <div class="price-cake">250.000 VNĐ</div>
@@ -313,7 +313,7 @@
                 </div>
 
                 <div class="bs-sli-item">
-                  <div class="bs-image"><img src="./images/bestSelling/banhAnKieng.jpeg" alt=""></div>
+                  <div class="bs-image"><img src="/images/bestSelling/banhAnKieng.jpeg" alt=""></div>
                   <div class="bs-info">
                         <div class="name-cake">Bánh mì ăn kiêng</div>
                         <div class="price-cake">250.000 VNĐ</div>
@@ -322,7 +322,7 @@
                 </div>
 
                 <div class="bs-sli-item">
-                  <div class="bs-image"><img src="./images/bestSelling/banhAnKieng.jpeg" alt=""></div>
+                  <div class="bs-image"><img src="/images/bestSelling/banhAnKieng.jpeg" alt=""></div>
                   <div class="bs-info">
                         <div class="name-cake">Bánh mì ăn kiêng</div>
                         <div class="price-cake">250.000 VNĐ</div>
@@ -331,7 +331,7 @@
                 </div>
 
                 <div class="bs-sli-item">
-                  <div class="bs-image"><img src="./images/bestSelling/banhAnKieng.jpeg" alt=""></div>
+                  <div class="bs-image"><img src="/images/bestSelling/banhAnKieng.jpeg" alt=""></div>
                   <div class="bs-info">
                         <div class="name-cake">Bánh mì ăn kiêng</div>
                         <div class="price-cake">250.000 VNĐ</div>
